--- a/_posts/2019-01-01-resume.md
+++ b/_posts/2019-01-01-resume.md
@@ -1,4 +1,11 @@
-#
-![VMware12Pro.png](https://raw.githubusercontent.com/markchan3/markchan3.github.io/master/img/learningC%2B%2B/VMware12Pro.png)
-Author Markchan     
-01/02/2019
+# Hello World
+![VMware12Pro.png](https://raw.githubusercontent.com/markchan3/markchan3.github.io/master/img/resume/Photo.png)
+
+ 
+	*Author : markchan      
+	*skills :Computer novice,word-lover
+	*Favorite animal: The emperor penguin   
+	*email:markchanemail@163.com  
+	*quote:Law of 10,000 hours  
+
+01/01/2019
