--- a/_posts/2019-01-01-resume.md
+++ b/_posts/2019-01-01-resume.md
@@ -2,10 +2,10 @@
 ![VMware12Pro.png](https://raw.githubusercontent.com/markchan3/markchan3.github.io/master/img/resume/Photo.png)
 
  
-	*Author : markchan      
-	*skills :Computer novice,word-lover
-	*Favorite animal: The emperor penguin   
-	*email:markchanemail@163.com  
-	*quote:Law of 10,000 hours  
+Author : 			__markchan__      
+skills :			__Computer novice,word-lover__
+Favorite animal: 	__The emperor penguin__   
+email:				__markchanemail@163.com__
+quote:				__Law of 10,000 hours __ 
 
 01/01/2019
