--- a/_posts/2019-01-03-ARM数据代码.md
+++ b/_posts/2019-01-03-ARM数据代码.md
@@ -50,22 +50,22 @@ ARM程序的组成
 所谓ARM映像文件就是指烧录到ROM中的bin文件，也成为image文件。以下用Image文件来称呼它。
 Image文件包含了RO和RW数据。  
 之所以Image文件不包含ZI数据，是因为ZI数据都是0，没必要包含，只要程序运行之前将ZI数据所在的区域一律清零即可。包含进去反而浪费存储空间。
-#### __Q：__为什么Image中必须包含RO和RW？
-#### __A：__因为RO中的指令和常量以及RW中初始化过的变量是不能像ZI那样“无中生有”的。
+#### Q：为什么Image中必须包含RO和RW？
+#### A：因为RO中的指令和常量以及RW中初始化过的变量是不能像ZI那样“无中生有”的。
  ARM程序的执行过程  
 从以上两点可以知道，烧录到ROM中的image文件与实际运行时的ARM程序之间并不是完全一样的。因此就有必要了解ARM程序是如何从ROM中的image到达实际运行状态的。  
 实际上，RO中的指令至少应该有这样的功能：
 1. 将RW从ROM中搬到RAM中，因为RW是变量，变量不能存在ROM中。
 2. 将ZI所在的RAM区域全部清零，因为ZI区域并不在Image中，所以需要程序根据编译器给出的ZI地址及大小来将相应得RAM区域清零。ZI中也是变量，同理：变量不能存在ROM中
 在程序运行的最初阶段，RO中的指令完成了这两项工作后C程序才能正常访问变量。否则只能运行不含变量的代码。说了上面的可能还是有些迷糊，RO，RW和ZI到底是什么，下面我将给出几个例子，最直观的来说明RO，RW，ZI在C中是什么意思。RO看下面两段程序，他们之间差了一条语句，这条语句就是声明一个字符常量。因此按照我们之前说的，他们之间应该只会在RO数据中相差一个字节（字符常量为1字节）。
----
+-------
 		Prog1：
 		＃include
 		void main(void)
 		{
 		;
 		}
----
+-----
 		Prog2：
 		＃include
 		const char a = 5；
@@ -74,7 +74,7 @@ Image文件包含了RO和RW数据。
 		;
 		}
 ###	Prog1编译出来后的信息如下：
----
+--------
 	Code RO Data RW Data ZI Data Debug  
 	948 60 0 96 0 Grand Totals  
 	Total RO Size(Code + RO Data) 1008 ( 0.98kB)
@@ -82,7 +82,7 @@ Image文件包含了RO和RW数据。
 	Total ROM Size(Code + RO Data + RW Data) 1008 ( 0.98kB)
 -- -
 ###	Prog2编译出来后的信息如下：
-------
+--------
 	Code RO Data RW Data ZI Data Debug
 	948 61 0 96 0 Grand Totals
 
@@ -93,14 +93,14 @@ Image文件包含了RO和RW数据。
 以上两个程序编译出来后的信息可以看出：  
 Prog1和Prog2的RO包含了Code和RO Data两类数据.    
 他们的唯一区别就是Prog2的RO Data比Prog1多了1个字节。这正和之前的推测一致。如果增加的是一条指令而不是一个常量，则结果应该是Code数据大小有差别。RW同样再看两个程序，他们之间只相差一个“已初始化的变量”，按照之前所讲的，已初始化的变量应该是算在RW中的，所以两个程序之间应该是RW大小有区别。
----
+-----
 		Prog3：
 		＃i nclude
 		void main(void)
 		{
 		;
 		}
----
+------
 		Prog4：
 		＃i nclude
 		char a = 5；
@@ -109,14 +109,14 @@ Prog1和Prog2的RO包含了Code和RO Data两类数据.
 		;
 		}
 Prog3编译出来后的信息如下：
----
+-----
 	Code RO Data RW Data ZI Data Debug
 	948 60 0 96 0 Grand Totals
 	Total RO Size(Code + RO Data) 1008 ( 0.98kB)
 	Total RW Size(RW Data + ZI Data) 96 ( 0.09kB)
 	Total ROM Size(Code + RO Data + RW Data) 1008 ( 0.98kB)
 Prog4编译出来后的信息如下：
----
+------
 	Code RO Data RW Data ZI Data Debug
 	948 60 1 96 0 Grand Totals
 	Total RO Size(Code + RO Data) 1008 ( 0.98kB)
@@ -124,21 +124,21 @@ Prog4编译出来后的信息如下：
 	Total ROM Size(Code + RO Data + RW Data) 1009 ( 0.99kB)
 ================================================================================
 可以看出Prog3和Prog4之间确实只有RW Data之间相差了1个字节，这个字节正是被初始化过的一个字符型变量“a”所引起的。ZI再看两个程序，他们之间的差别是一个未初始化的变量“a”，从之前的了解中，应该可以推测，这两个程序之间应该只有ZI大小有差别。
----
-		Prog3：
+`Prog3：
 		＃i nclude
 		void main(void)
 		{
 		;
 		}
----
-		Prog4：
+`
+`		Prog4：
 		＃i nclude
 		char a；
 		void main(void)
 		{
 		;
 		}
+`
 Prog3编译出来后的信息如下：
 ---
 	Code RO Data RW Data ZI Data Debug
