--- a/_posts/2019-01-03-ARM数据代码.md
+++ b/_posts/2019-01-03-ARM数据代码.md
@@ -1,24 +1,26 @@
-# 单片机问题 *codeRO-data,RW-data,ZI-data*  
-## 1.keil编译后codeRO-data,RW-data,ZI-data含义mcu的flash实际存储数据  
-  
-keil编译后会有一行：Program Size:Code=xxx  
-&nbsp;&nbsp;&nbsp;RO-data=xxx   
-&nbsp;&nbsp;&nbsp;RW-data=xxx   
-&nbsp;&nbsp;&nbsp;ZI-data=xxx  
-&nbsp;&nbsp;&nbsp;RO就是readonly，RW就是read/write，ZI就是zero  
-&nbsp;&nbsp;&nbsp;Code 代表执行的代码，程序中所有的函数都位于此处。  
-&nbsp;&nbsp;&nbsp;RO-data 代表只读数据，程序中所定义的全局常量数据和字符串都位于此处。  
-&nbsp;&nbsp;&nbsp;RW-data 代表已初始化的读写数据，程序中定义并且初始化的全局变量和静态变量位于此处。  
-&nbsp;&nbsp;&nbsp;ZI-data 代表未初始化的读写数据，程序中定义了但没有初始化的全局变量和静态变量位于此处。  
-&nbsp;&nbsp;&nbsp;ZI英语是zero initial，就是程序中用到的变量并且被系统初始化为0的变量的字节数，  
+# keil codeRO-data,RW-data,ZI-data   
+##1.keil编译后codeRO-data,RW-data,ZI-data含义mcu的flash实际存储数据  
+keil编译后会有一行：
+```
+Program Size:Code=xxx   
+RO-data=xxx   
+RW-data=xxx   
+ZI-data=xxx  
+```
+RO:就是readonly，RW就是read/write，ZI就是zero  
+Code:代表执行的代码，程序中所有的函数都位于此处。  
+RO-data:代表只读数据，程序中所定义的全局常量数据和字符串都位于此处。  
+RW-data:代表已初始化的读写数据，程序中定义并且初始化的全局变量和静态变量位于此处。  
+ZI-data:代表未初始化的读写数据，程序中定义了但没有初始化的全局变量和静态变量位于此处。  
+ZI英语是zero initial，就是程序中用到的变量并且被系统初始化为0的变量的字节数，  
 keil编译器默认是把你没有初始化的变量都赋值一个0，这些变量在程序运行时是保存在RAM中的。
 
-## 2.如果你查看.map文件，如下例子：
-----
+##2.如果你查看.map文件，如下例子：
+```
     Total RO  Size (Code + RO Data)                 2980 (   2.91kB)
     Total RW  Size (RW Data + ZI Data)               104 (   0.10kB)
     Total ROM Size (Code + RO Data + RW Data)       2988 (   2.92kB)
-
+```
 Total ROM Size (Code + RO Data + RW Data)这样所写的程序占用的ROM的字节总数，也就是说程序所下载到ROM flash 中的大小。
 为什么Rom中还要存RW，因为掉电后RAM中所有数据都丢失了，每次上电RAM中的数据是被重新赋值的，
 每次这些固定的值就是存储在Rom中的，为什么不包含ZI段呢，是因为ZI数据都是0，没必要包含，
@@ -165,7 +167,7 @@ Prog4编译出来后的信息如下：
 总结：   
 C中的指令以及常量被编译后是RO类型数据。   
 C中的未被初始化或初始化为0的变量编译后是ZI类型数据。   
- C中的已被初始化成非0值的变量编译后市RW类型数据。   
+C中的已被初始化成非0值的变量编译后市RW类型数据。   
 附：  
 程序的编译命令（假定C程序名为tst.c）：  
 armcc -c -o tst.o tst.c  
